--- a/lms/03-GoingDeeper/04-segementation/02-prj.ipynb
+++ b/lms/03-GoingDeeper/04-segementation/02-prj.ipynb
@@ -553,7 +553,10 @@
     "    \n",
     "#     # upcoonv 2x2 2    \n",
     "    \n",
-    "#     x = Conv2D(64, 3, activation='relu', padding='same',kernel_initialize=\"he_normal\")(x)\n",
+    "#     x = Conv2D(64, 3, activation='relu', padding='same',kernel_initialize=\"he_normal\")(\n",
+    "  inputs = Input(input_shape)\n",
+    "  conv1 = Conv2D(64, 3, activation='relu', padding='same',kernel_initializer='he_normal')(inputs)\n",
+    "  conv1 = Conv2D(64, 3, activation='relu', padding='sax)\n",
     "#     x = Conv2D(64, 3, activation='relu', padding='same',kernel_initialize=\"he_normal\")(x)\n",
     "    \n",
     "#       # upcoonv 2x2 2     \n",
