--- a/lms/03-GoingDeeper/04-segementation/guide.ipynb
+++ b/lms/03-GoingDeeper/04-segementation/guide.ipynb
@@ -1231,13 +1231,7 @@
       "43/43 [==============================] - 12s 275ms/step - loss: 0.1279 - val_loss: 0.1371\n",
       "Epoch 77/100\n",
       "43/43 [==============================] - 13s 303ms/step - loss: 0.1249 - val_loss: 0.1288\n",
-      "Epoch 78/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 78/100\n",
       "43/43 [==============================] - 13s 302ms/step - loss: 0.1261 - val_loss: 0.1372\n",
       "Epoch 79/100\n",
       "43/43 [==============================] - 13s 297ms/step - loss: 0.1268 - val_loss: 0.1304\n",
@@ -1510,6 +1504,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
