--- a/lms/03-GoingDeeper/04-segementation/02-prj.ipynb
+++ b/lms/03-GoingDeeper/04-segementation/02-prj.ipynb
@@ -809,13 +809,7 @@
       "11/11 [==============================] - 7s 615ms/step - loss: 0.0102 - val_loss: 0.0148\n",
       "Epoch 75/100\n",
       "11/11 [==============================] - 7s 623ms/step - loss: 0.0163 - val_loss: 0.0165\n",
-      "Epoch 76/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 76/100\n",
       "11/11 [==============================] - 7s 623ms/step - loss: 0.0122 - val_loss: 0.0189\n",
       "Epoch 77/100\n",
       "11/11 [==============================] - 7s 625ms/step - loss: 0.0126 - val_loss: 0.0166\n",
@@ -1606,13 +1600,7 @@
       "43/43 [==============================] - 14s 317ms/step - loss: 0.5358 - val_loss: 0.5448\n",
       "Epoch 77/100\n",
       "43/43 [==============================] - 14s 319ms/step - loss: 0.5385 - val_loss: 0.5481\n",
-      "Epoch 78/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 78/100\n",
       "43/43 [==============================] - 14s 317ms/step - loss: 0.5362 - val_loss: 0.5531\n",
       "Epoch 79/100\n",
       "43/43 [==============================] - 14s 316ms/step - loss: 0.5348 - val_loss: 0.5413\n",
@@ -1820,7 +1808,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "193.368px"
+    "width": "193.351px"
    },
    "toc_section_display": true,
    "toc_window_display": true
