--- a/lms/03-GoingDeeper/05-Class_activation_map/01-basic.ipynb
+++ b/lms/03-GoingDeeper/05-Class_activation_map/01-basic.ipynb
@@ -54,7 +54,120 @@
     "## cam\n",
     "- class activation map\n",
     "\n",
-    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/GC-3-L-5.max-800x600.png)\n"
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/GC-3-L-5.max-800x600.png)\n",
+    "\n",
+    "\n",
+    "- gap 을 통해 추출\n",
+    "- 단점, gap layer 반드시 추가, <해야하므오로 성능감소, fine-tunning "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## grad-cam\n",
+    "\n",
+    "- 그래디언트를 통한 Weight Score 계산\n",
+    "\n",
+    "\n",
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/GC-3-L-9.max-800x600.png)\n",
+    "\n",
+    "- 모델 구조 변경없이 적용가능."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 약지도 학습\n",
+    "- weakly supervised learning\n",
+    "- cam, grad-cam, ACol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-12T04:47:56.727751Z",
+     "start_time": "2020-11-12T04:47:56.723730Z"
+    }
+   },
+   "source": [
+    "- 약지도 학습 vs 준지도학습(semi_supervised learning)\n",
+    "\n",
+    "- 약지도 학습 포괄\n",
+    "    + incomplete supervision : 학습 데이터 중 일부에만 라벨이 달려 있는 경우 (예: 개와 고양이 분류 학습시 10000개의 이미지 중 1000개만 라벨이 있는 경우) 이 경우가 일반적으로 말하는 준지도학습과 같은 경우입니다.\n",
+    "\n",
+    "    + inexact supervision : 학습데이터의 라벨이 충분히 정확하게 달려있지 않은 경우. (예: 개나 고양이를 Object Detection 또는 Semantic Segmentation해야 하는데, 이미지 내에 정확한 bounding box는 주어져 있지 않고 이미지가 개인지 고양인지 정보만 라벨로 달려있는 경우)\n",
+    "\n",
+    "    + inaccurate supervision : 학습 데이터에 Noise가 있는 경우 (예: 개나 고양이의 라벨이 잘못 달려있는 경우)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ACol: Adversarial Complementary\n",
+    "\n",
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/GC-3-L-13.max-800x600.png)\n",
+    "\n",
+    "-  CAM 모델이 특정 부위에 집중해 학습하는 것을 막기 위해서 ACoL은 브랜치를 두 가지로 두어 너무 높은 점수를 지워줌으로서 주변의 특성 또한 반영하도록 했습니다. 이러한 과정을 논문에서는 Adversial, 즉 적대적인 학습방법"
    ]
   },
   {
@@ -109,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -122,7 +235,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
