--- a/lms/03-GoingDeeper/05-Class_activation_map/01-basic.ipynb
+++ b/lms/03-GoingDeeper/05-Class_activation_map/01-basic.ipynb
@@ -167,29 +167,60 @@
     "\n",
     "![](https://aiffelstaticprd.blob.core.windows.net/media/images/GC-3-L-13.max-800x600.png)\n",
     "\n",
-    "-  CAM 모델이 특정 부위에 집중해 학습하는 것을 막기 위해서 ACoL은 브랜치를 두 가지로 두어 너무 높은 점수를 지워줌으로서 주변의 특성 또한 반영하도록 했습니다. 이러한 과정을 논문에서는 Adversial, 즉 적대적인 학습방법"
+    "-  CAM 모델이 특정 부위에 집중해 학습하는 것을 막기 위해서 ACoL은 브랜치를 두 가지로 두어 너무 높은 점수를 지워줌으로서 주변의 특성 또한 반영하도록 했습니다. 이러한 과정을 논문에서는 Adversial, 즉 적대적인 학습방법\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-12T07:11:44.036393Z",
+     "start_time": "2020-11-12T07:11:44.032410Z"
+    }
+   },
+   "source": [
+    "- cam, grad-cam a문제점\n",
+    "    + 특징이 주로 나타나는 위치에 중점적으로 활성화\n",
+    "    + 물체는 부분이 아닌 전체적인 형태와 윤곽 구분이 중요\n",
+    "    \n",
+    "    \n",
+    "-  ACoL은 브랜치를 두 가지로 두어 너무 높은 점수를 지워줌 => 즉 적대적인 학습방법\n",
+    "\n",
+    "- (주황) 특성 맵은 GAP을 거쳐 CAM에서 보았던 소프트맥스 레이어인 Classifier A를 거치게 됩니다. 이 브랜치는 loss로 학습, Classifier A는 쉽게 전체적인 이미지를 보고 클래스를 판별할 수 있음\n",
+    "\n",
+    "- (녹) Classifier B는 A의 CAM에서 크게 활성화된 영역을 지운 활성화 맵에서 분류를 해야하기 때문에 더 어려운 문제를 푸는 것으로 볼 수 있음\n",
+    "\n",
+    "- Classifier A와 Classifier B를 학습시킴으로써 더 넓은 영역을 판별의 근거로 삼을 수 있음\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-12T07:19:44.693149Z",
+     "start_time": "2020-11-12T07:19:44.561110Z"
+    }
+   },
+   "source": [
+    "### 1x1 conv\n",
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/GC-3-L-15.max-800x600.png)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-12T07:19:55.456074Z",
+     "start_time": "2020-11-12T07:19:55.451838Z"
+    }
+   },
+   "source": [
+    "- CAM에서는 CAM을 얻기 위해서 대상이 되는 네트워크에 feed forward를 하고 활성화 맵과 가중치 계산을 다시 해주어야 합니다. 이 과정은 관찰하고자 하는 분류 모델의 feed forward와 별개의 작업이므로, 물체 검출을 위한 모델로 사용하기 위해서는 모델의 feed forward 외 별도의 연산을 해주어야 하는 단점이 있습니다.\n",
+    "\n",
+    "- ACoL 논문은 이를 개선하기 위해서 커널 사이즈는 1x1, 출력 채널의 개수는 분류하고자 하는 클래스 개수를 가진 컨볼루션 레이어를 특성 맵에 사용하고 여기에 GAP를 적용하여 Network in Network에서 본 구조와 유사한 방식을 사용하고 있습니다. 여기서 컨볼루션 레이어의 출력값은 곧바로 활성화 맵이 됩니다. 이렇게 구해진 활성화 맵과 CAM을 비교한 결과를 위 그림의 왼쪽에서 볼 수 있습니다."
+   ]
   },
   {
    "cell_type": "code",
@@ -233,7 +264,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "195.594px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   },
