--- a/lms/01-EXPLORATION/E26-KorQuAD/01-basic.ipynb
+++ b/lms/01-EXPLORATION/E26-KorQuAD/01-basic.ipynb
@@ -3642,10 +3642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-11-16T08:38:17.516Z"
+     "end_time": "2020-11-16T09:13:54.831995Z",
+     "start_time": "2020-11-16T08:38:17.555649Z"
     }
    },
    "outputs": [
@@ -3754,6 +3755,103 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 4 >> loss: 3.9454, 4.6836, acc: 0.1573, 0.1329\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3b66a13e1cf246b39944ed4be29995a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 5 >> loss: 4.0450, 4.6139, acc: 0.1529, 0.1294\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0322777761b4dc8b9ddbb9d269b2fae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 6 >> loss: 4.2881, 5.3251, acc: 0.1461, 0.1262\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12c1818b862841f9b5fbb31cdd760ebb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 7 >> loss: 4.6261, 5.4189, acc: 0.1390, 0.1173\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0182e441594343a786fe0f9dbd9d4535",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 8 >> loss: 5.4588, 6.4138, acc: 0.1341, 0.1122\n",
+      "early stopping\n"
+     ]
     }
    ],
    "source": [
@@ -3811,13 +3909,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-11-16T08:45:54.843Z"
+     "end_time": "2020-11-16T09:17:25.214661Z",
+     "start_time": "2020-11-16T09:17:24.984461Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"BERT4KorQuAD\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "bert (BERT)                  multiple                  10662400  \n",
+      "_________________________________________________________________\n",
+      "dense_41 (Dense)             multiple                  514       \n",
+      "=================================================================\n",
+      "Total params: 10,662,914\n",
+      "Trainable params: 10,662,914\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "checkpoint_file = os.path.join(model_dir, 'bert_pretrain_32000.hdf5')\n",
     "\n",
@@ -3853,10 +3971,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 117,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-17T04:58:51.490291Z",
+     "start_time": "2020-11-17T04:22:45.076139Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0daee34bb8f74c938477d414a9c6a9a8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 0 >> loss: 3.6643, 4.2984, acc: 0.1324, 0.0936\n",
+      "save best model\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc2187b0399c426bb268feef143569cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 1 >> loss: 3.6245, 4.1522, acc: 0.1478, 0.1227\n",
+      "save best model\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e8f282b66594099af67b2c5819d3eb5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 2 >> loss: 3.6155, 4.1047, acc: 0.1613, 0.1373\n",
+      "save best model\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7dbd1c95447d44338f300ab9f4848460",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 3 >> loss: 3.7609, 4.3341, acc: 0.1657, 0.1390\n",
+      "save best model\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06106cd2c21949e683ebe27ffb15d163",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 4 >> loss: 3.9195, 4.5154, acc: 0.1541, 0.1380\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "394bdd2bd4f049228015c2ee1352f14d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 5 >> loss: 4.0746, 4.7461, acc: 0.1475, 0.1325\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0ea6dbea05c4076ace8793890064ac9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 6 >> loss: 4.5586, 5.3446, acc: 0.1459, 0.1197\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ce8b58aeb6145b59cd909c8f0cc7555",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 7 >> loss: 4.8432, 5.7994, acc: 0.1304, 0.1187\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f2ada2915284540b6bf04ed8c155caa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1875.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "eval 8 >> loss: 4.8955, 5.6816, acc: 0.1408, 0.1208\n",
+      "early stopping\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss_fn = tf.keras.losses.sparse_categorical_crossentropy\n",
+    "acc_fn = tf.keras.metrics.sparse_categorical_accuracy\n",
+    "\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=5e-4)\n",
+    "\n",
+    "best_acc = .0\n",
+    "patience = 0\n",
+    "for epoch in range(20):\n",
+    "    train_epoch(model, train_dataset, loss_fn, acc_fn, optimizer)\n",
+    "    start_loss, end_loss, start_acc, end_acc = eval_epoch(model, dev_dataset, loss_fn, acc_fn)\n",
+    "    print(f'eval {epoch} >> loss: {start_loss:0.4f}, {end_loss:0.4f}, acc: {start_acc:0.4f}, {end_acc:0.4f}')\n",
+    "    acc = start_acc + end_acc\n",
+    "    if best_acc < acc:\n",
+    "        patience = 0\n",
+    "        best_acc = acc\n",
+    "        model.save_weights(os.path.join(data_dir, \"korquad_bert_none_pretrain.hdf5\"))\n",
+    "        print(f'save best model')\n",
+    "    else:\n",
+    "        patience += 1\n",
+    "    if 5 <= patience:\n",
+    "        print(f'early stopping')\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "code",
@@ -3910,9 +4261,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-17T04:58:51.558882Z",
+     "start_time": "2020-11-17T04:23:02.937Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def do_predict(model, question, context):\n",
+    "    \"\"\"\n",
+    "    입력에 대한 답변 생성하는 함수\n",
+    "    :param model: model\n",
+    "    :param question: 입력 문자열\n",
+    "    :param context: 입력 문자열\n",
+    "    \"\"\"\n",
+    "    q_tokens = vocab.encode_as_pieces(question)[:args.max_query_length]\n",
+    "    c_tokens = vocab.encode_as_pieces(context)[:args.max_seq_length - len(q_tokens) - 3]\n",
+    "    tokens = ['[CLS]'] + q_tokens + ['[SEP]'] + c_tokens + ['[SEP]']\n",
+    "    token_ids = [vocab.piece_to_id(token) for token in tokens]\n",
+    "    segments = [0] * (len(q_tokens) + 2) + [1] * (len(c_tokens) + 1)\n",
+    "\n",
+    "    y_start, y_end = model(np.array([token_ids]), np.array([segments]))\n",
+    "    # print(y_start, y_end)\n",
+    "    y_start_idx = K.argmax(y_start, axis=-1)[0].numpy()\n",
+    "    y_end_idx = K.argmax(y_end, axis=-1)[0].numpy()\n",
+    "    answer_tokens = tokens[y_start_idx:y_end_idx + 1]\n",
+    "\n",
+    "    return vocab.decode_pieces(answer_tokens)"
+   ]
   },
   {
    "cell_type": "code",
@@ -3924,9 +4301,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-17T04:58:51.560442Z",
+     "start_time": "2020-11-17T04:23:03.720Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "dev_json = os.path.join(data_dir, \"korquad_dev.json\")\n",
+    "\n",
+    "with open(dev_json) as f:\n",
+    "    for i, line in enumerate(f):\n",
+    "        data = json.loads(line)\n",
+    "        question = vocab.decode_pieces(data['question'])\n",
+    "        context = vocab.decode_pieces(data['context'])\n",
+    "        answer = data['answer']\n",
+    "        answer_predict = do_predict(model, question, context)\n",
+    "        if answer in answer_predict:\n",
+    "            print(i, answer, \"/\", answer_predict)\n",
+    "        if 100 < i:\n",
+    "            break"
+   ]
   },
   {
    "cell_type": "code",
@@ -3946,8 +4342,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 학습경과 시각화 비교분석"
+    "직접 모델:  loss: 5.4588, 6.4138, acc: 0.1341, 0.1122\n",
+    "pretrained 모델 :   loss: 4.8955, 5.6816, acc: 0.1408, 0.1208"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3995,7 +4406,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "237.188px"
+    "width": "384px"
    },
    "toc_section_display": true,
    "toc_window_display": true
