--- a/lms/03-GoingDeeper/06-ocr/01-basic.ipynb
+++ b/lms/03-GoingDeeper/06-ocr/01-basic.ipynb
@@ -13,6 +13,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## . Tesseract OCR`\n",
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/ARCHIT1.max-800x600.png)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text detection\n",
+    "`\n",
+    "- EAST: An Efficient and Accurate Scene Text Detector\n",
+    "https://arxiv.org/pdf/1704.03155v2.pdf\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regrression\n",
+    "- TextBoxes: A Fast Text Detector with a Single Deep Neural Network\n",
+    "- https://arxiv.org/pdf/1611.06779.pdf\n",
+    "\n",
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/architecture_of_textboxes.max-800x600.png)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## segmenation\n",
+    "- PixelLink: Detecting Scene Text via Instance Segmentation\n",
+    "- https://arxiv.org/pdf/1801.01315.pdf\n",
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/architecture_pixellink.max-800x600.png)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 최근의 방법"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### craft\n",
+    "- Character Region Awareness for Text Detection\n",
+    "- https://arxiv.org/abs/1904.01941\n",
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/craft_affinity_map.max-800x600.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pyramide Mask text detector \n",
+    "- PMTD(Pyramid Mask Text Detector)는 Mask-RCNN의 구조를 활용하여 먼저 Text영역을 Regrion proposal network로 찾아냅니다. 그다음 Box head에서 더 정확하게 regression 및 classification을 하고 Mask head에서 Instance의 Segmentation을 하는 과정을 거칩니다.\n",
+    "\n",
+    "\n",
+    "- PMTD는 여기서 Mask 정보가 부정확한 경우를 반영하기 위해서 Soft-segmentation을 활용합니다. 이전의 Mask-RCNN의 경우 단어 영역이 Box head에 의해 빨간색으로 잡히면 우측 처럼 boundary를 모두 Text 영역으로 잡지만, PMTD는 단어의 사각형 배치 특성을 반영하여 피라미드 형태의 Score map을 활용합니다\n",
+    "\n",
+    "\n",
+    "![](https://aiffelstaticprd.blob.core.windows.net/media/images/PMTD.max-800x600.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Text recognition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Unsegmented Data\n",
+    "- Segmentation이 되어있지 않은 데이터를 Unsegmented data\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CRNN\n",
+    "- An End-to-End Trainable Neural Network for Image-based Sequence Recognition and Its Application to Scene Text Recognition\n",
+    "\n",
+    "\n",
+    "- https://arxiv.org/pdf/1507.05717.pdf\n",
+    "\n",
+    "\n",
+    "- CNN(Convolutional neural network)과 RNN(Recurrent neural network)을 같이 쓰는 방법\n",
+    "\n",
+    "\n",
+    "- Feature Extractor가 필요합니다. Feature Extractor로 사용되는 CNN을 기반의 VGG 또는 ResNet과 같은 네트워크로부터 문자의 정보를 가진 Feature를 얻고.\n",
+    "\n",
+    "\n",
+    "- 렇게 추출된 Feature를 Map-To-Sequence를 통해 Sequence형태의 feature로 변환한 후 다양한 길이의 Input을 처리할 수 있는 RNN으로\n",
+    "\n",
+    "\n",
+    "- RNN이 Feature로 부터 문자를 인식하기 위해서는 문자 영역처럼 넓은 정보가 필요하기 때문에 LSTM으로 구성합니다. 그리고 앞의 정보뿐만 아니라 뒤의 정보가 필요하기 때문에 이를 Bidirectional로 구성해서 Bidirectional LSTM을 사용했습니다. Bidirectional LSTM으로 step마다 나오는 결과는 Transcription Layer에서 문자로 변환\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CTC\n",
+    "- http://www.cs.toronto.edu/~graves/icml_2006.pdf\n",
+    "\n",
+    "\n",
+    "## tps\n",
+    "- Robust Scene Text Recognition With Automatic Rectification\n",
+    "- https://arxiv.org/pdf/1603.03915.pdf\n",
+    "\n",
+    "\n",
+    "- Spatial Transformation Network\n",
+    "- https://3months.tistory.com/197\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Text recognition + Attention\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -63,7 +255,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
